[gd_scene load_steps=11 format=3 uid="uid://dw2fe1baj0dnu"]

[ext_resource type="Script" path="res://enemies/corpo/corpo_character.gd" id="1_3ovqs"]
[ext_resource type="Texture2D" uid="uid://bx8exrmbqq4t0" path="res://enemies/corpo/corpo_idle_walk_stun_sheet.png" id="1_nxc80"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yny3j"]
radius = 13.0
height = 52.0

[sub_resource type="Animation" id="Animation_xyyy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tkl8l"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 4, 5, 4]
}

[sub_resource type="Animation" id="Animation_nmet2"]
resource_name = "still"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_ff6sb"]
resource_name = "walk"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e4dko"]
_data = {
"RESET": SubResource("Animation_xyyy4"),
"hit": SubResource("Animation_tkl8l"),
"still": SubResource("Animation_nmet2"),
"walk": SubResource("Animation_ff6sb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hov56"]
size = Vector2(20, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nogkq"]
size = Vector2(28, 54)

[node name="CorpoCharacter" type="AnimatableBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_3ovqs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_yny3j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3.5)
scale = Vector2(1, 0.859375)
texture = ExtResource("1_nxc80")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e4dko")
}

[node name="RightCast" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)

[node name="LeftCast" type="RayCast2D" parent="."]
target_position = Vector2(-14, 0)

[node name="Movement" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Head" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_hov56")

[node name="Colliding" type="Timer" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Body" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_nogkq")

[connection signal="flip_action" from="." to="." method="_on_flip_action"]
[connection signal="timeout" from="Movement" to="." method="_on_movement_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="Colliding" to="." method="_on_colliding_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
